# NewHacks2025

./: README.md  package-lock.json  package.json  test_email.py
{{cookiecutter.project_slug}}/: .env  .env.example  .gitignore  PROJECT_STATUS.md  README.md  package.json  requirements.txt  setup.sh  start.sh
{{cookiecutter.project_slug}}/backend/: .env  BACKEND_SUMMARY.md  README.md
{{cookiecutter.project_slug}}/backend/app/: .env  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/: alert_service.py  database.py  email_service.py  gchat.py  gemini.py  main.py  main_simple.py  models.py  price_service.py  price_storage.py  rag_store.json  services.py  ticker.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/: api.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: login.py  users.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/gemini/: __init__.py  rag.py
{{cookiecutter.project_slug}}/backend/app/app/indicators/: __init__.py  all_indicators.py  crossovers.py  ema.py  rsi.py  rsi_conditions.py  sma.py
{{cookiecutter.project_slug}}/backend/app/app/routers/: alerts.py  portfolio.py  prices.py
{{cookiecutter.project_slug}}/frontend/: README.md  package.json  postcss.config.js  tsconfig.json
{{cookiecutter.project_slug}}/frontend/app/: globals.css  layout.tsx  page.tsx
{{cookiecutter.project_slug}}/frontend/app/components/: Header.tsx  alert-demo.tsx  chart.tsx  condition-graph.tsx  multi-condition-graph.tsx  sidebar.tsx
{{cookiecutter.project_slug}}/frontend/app/lib/: api.ts
