[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
dynamic = ["version"]
description = "{{cookiecutter.project_name}} Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["fastapi", "mongodb", "hackathon"]
authors = [
  { name = "{{cookiecutter.project_name}} Team", email = "admin@{{cookiecutter.domain_main}}" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "inboard[fastapi]==0.56.*",
  "python-multipart>=0.0.5",
  "email-validator>=1.3.0",
  "requests>=2.28.1",
  "celery>=5.2.7",
  "passlib[bcrypt]>=1.7.4",
  "tenacity>=8.1.0",
  "emails>=0.6.0",
  "jinja2>=3.1.2",
  "python-jose[cryptography]>=3.3.0",
  "pydantic>=2.0,<2.7",
  "pydantic-settings>=2.0.3",
  "httpx>=0.23.1",
  "motor>=3.3.1",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "odmantic>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.2",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
]

[project.urls]
Documentation = "https://github.com/{{cookiecutter.project_slug}}/backend#readme"
Issues = "https://github.com/{{cookiecutter.project_slug}}/backend/issues"
Source = "https://github.com/{{cookiecutter.project_slug}}/backend"

[tool.hatch.version]
path = "app/__version__.py"

[dirs.env]
virtual = "./.venv"

[tool.hatch.envs.default]
dev-mode = true
python="3.11"
dependencies = []

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
]

[tool.hatch.envs.lint.scripts]
style = [
  "isort --check --diff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
  "style",
]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
src_paths = ["app", "tests"]

[tool.mypy]
files = ["**/*.py"]
plugins = "pydantic.mypy"
show_error_codes = true
strict = true